--- a/_talks/2023-11-21-talk-1.md
+++ b/_talks/2023-11-21-talk-1.md
@@ -1,8 +1,8 @@
 ---
-title: "Large-eddy simulation of non-spherical heavy particle transport in the atmospheric boundary layer"
+title: "Mixed convection in an idealized coastal urban environment with momentum and thermal surface heterogeneities"
 collection: talks
 type: "Conference proceedings talk"
 venue: "76th American Physical Society Division of Fluid Dynamics Annual Meeting"
-date: 2023-11-20
+date: 2023-11-21
 location: "Washington, DC"
 ---
